# Euron-coding-agent

./: .gitignore  ARCHITECTURE.md  LICENSE  NOTICE  PROJECT_GUIDE.md  PUBLISHING.md  README.md  TEST_REPORT.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
backend/euron_agent/: __init__.py  __main__.py  audit_log.py  ci.py  cli.py  commands.py  config.py  depaudit.py  doctor.py  events.py  headless.py  hooks.py  ingest.py  llm.py  loop.py  memory.py  modelrouter.py  notify.py  permissions.py  plugins.py  pricing.py  prompts.py  repomap.py  sandbox.py  scaffold.py  schedules.py  secrets.py  server.py  sessions.py  settings.py  skills.py  teams.py  tool_schemas.py  tools.py
backend/tests/: conftest.py  test_agent.py  test_integration.py
docs/: COMMANDS.md  MULTI_MODEL.md
extension/: .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
extension/media/: main.js  style.css
extension/src/: extension.ts
scripts/: update_readme_status.py
