[project]
name = "euron-coding-agent"
version = "1.4.0"
description = "Lightweight provider-agnostic agentic coding backend (CLI + server) for the Euron VS Code extension."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Euron Agent contributors" }]
keywords = ["ai", "agent", "coding", "llm", "cli", "vscode"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "openai>=1.30",
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
]

[project.urls]
Homepage = "https://github.com/euron-tech/Euron-coding-agent"
Issues = "https://github.com/euron-tech/Euron-coding-agent/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
bedrock = ["boto3>=1.34"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
euron-agent = "euron_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["euron_agent"]
